tests/should_fail/match_pattern_bool_on_int.nv
// should_fail: Bool literal pattern on an Int match
module match_pattern_bool_on_int
fn bad(n: Int) -> String {
    return match n {
        true => "nope",
        _ => "ok"
    }
}
